tests/fixtures/TypeConversionFunctionTests/errors/int64_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Int64())

